--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 
-
 .app {
   font-family: sans-serif;
   display: flex;
@@ -9,7 +8,9 @@
   gap: 20px;
   height: 100vh;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: #f8f9fd;
+  background-color: #85878b;
+  
+
 }
 
 input[type="text"],
@@ -54,7 +55,8 @@ input[type="submit"]:hover {
 
 .title {
   font-size: 25px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-left: 45px;
 }
 
 .input-container {
@@ -62,4 +64,78 @@ input[type="submit"]:hover {
   flex-direction: column;
   gap: 8px;
   margin: 10px;
+}
+.forgot{
+  display: flex;
+  flex-direction: column;
+  border: 0ch;
+  margin-left: 50px;
+  text-align: right;
+  float: right;
+  width:110px;
+  
+
+}
+.subtitle
+{
+  
+  display: flex;
+  text-align: center;
+  margin-left: 120px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+
+
+}
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+/* On mouse-over */
+.btn:hover {background: #eee;}
+
+.success {color: green;}
+.info {color: dodgerblue;}
+.warning {color: orange;}
+.danger {color: red;}
+.default {color: black;}
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  margin-left: 550px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+ 
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+  margin-left: 550px;
+}
+img {
+  width: 200px;
+  height: 300px;
+  object-position: left;
+  float: left;
 }
